Add a check for `textUnderlineOffset` in the `changeRequiresRepaintIfText` function

https://bugs.webkit.org/show_bug.cgi?id=283621

Reviewed by Alan Baradlay.

Currently, changing the `text-underline-offset` value does not trigger a repaint if the ink overflow state remains unchanged. With this update, a repaint will be triggered regardless of whether the ink overflow state changes.

* LayoutTests/fast/css/text-underline-offset-repaint-expected.txt: Added.
* LayoutTests/fast/css/text-underline-offset-repaint.html: Added.
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::changeRequiresRepaintIfText const):

Canonical link: https://commits.webkit.org/287048@main